Fix overflow issue in swap page

--- a/src/components/footer/Footer.pcss
+++ b/src/components/footer/Footer.pcss
@@ -2,6 +2,7 @@
 	display: flex;
 	justify-content: center;
 	gap: var(--space-4);
+	margin-top: var(--space-4);
 	margin-bottom: var(--space-8);
 }
 
