--- a/src/components/swap/Swap.pcss
+++ b/src/components/swap/Swap.pcss
@@ -4,7 +4,4 @@
 	padding: var(--space-6) var(--space-6) 0 var(--space-6);
 	align-items: center;
 	flex: 1 0 0;
-	align-self: stretch;
-	overflow-y: auto;
-	overflow-x: hidden;
-}
+	align-self: stretch;}
