--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -2,7 +2,7 @@
 	display: flex;
 	flex-direction: column;
 	margin: 0 auto;
-	height: 100vh;
+	min-height: 100vh;
 	width: 100vw;
 	background: linear-gradient(180deg, var(--color-gray-25) 0%, var(--color-gray-50) 70.12%);
 }
