--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -11,6 +11,7 @@ html {
 	-webkit-text-size-adjust: none;
 	text-size-adjust: none;
 	font-family: var(--font-family-primary);
+	height: 100%;
 }
 
 ul[role='list'],
@@ -21,14 +22,23 @@ ol[role='list'] {
 body {
 	padding: 0;
 	margin: 0;
-	height: calc(100vh - var(--header-height) - var(--footer-height));
+	min-height: 100%;
+	overflow-y: auto;
+	overflow-x: hidden;
+}
+
+@media only screen and (max-width: 743px) {
+	body {
+		height: 100%;
+		min-height: 100vh;
+		overflow-y: auto;
+	}
 }
 
 main {
 	display: flex;
 	flex-direction: column;
 	width: 100%;
-	overflow: hidden;
 	flex-grow: 1;
 }
 
